--- a/src/app/press-release/press-release.component.html
+++ b/src/app/press-release/press-release.component.html
@@ -5,12 +5,12 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-md-6 english">
+    <div class="col col-md-12 col-lg-6 english">
       <h4>Middle East Corporate Finance Leaders Foresee Substantial Economic Growth and Plan to Increase Spending and Investment Worldwide, American Express Global Survey</h4>
       <p>Middle East finance executives report great confidence in economic growth prospects for the year ahead, finds the 2018 Global Business &amp; Spending Outlook, a survey released today by American Express Middle East.  The vast majority of respondents – more than 90% – anticipate modest to substantial economic expansion in their country, closely aligned with the worldwide trend (85%). </p>
       <a href="#" class="btn btn-primary" download="press-release-en.pdf">Download Full Press Release</a>
     </div>
-    <div class="col-md-6 arabic">
+    <div class="col col-md-12 col-lg-6 arabic">
       <h4>دراسة لامريكان اكسبريس: كبار المسؤولين الماليين والتنفيذيين في الشرق الأوسط يتوقعون نمواً اقتصادياً قوياً ويخططون لزيادة الإنفاق والاستثمار</h4>
       <p>عبّر مسؤولون ماليون وتنفيذيون كبار في الشرق الأوسط عن ثقتهم الكبيرة في فرص النمو الاقتصادي لسنة 2018، وذلك وفقاً لدراسة "توقعات الأعمال والإنفاق في العالم 2018" والتي كشفت عن نتائجها اليوم أمريكان إكسبريس الشرق الأوسط. وبحسب الدراسة، فقد توقعت الغالبية العظمى من المسؤولين الذين اُستطلعت آرؤاهم (أكثر من %90)، أن تشهد بلدانهم نمواً اقتصادياً تتراوح معدلاته ما بين "طفيف" و"قوي"، وهو ما يتماشى بدرجة كبيرة مع الاتجاه العالمي (%85).</p>
       <a href="#" class="btn btn-primary" download="press-release-ar.pdf">حمل البيان الصحفي كاملاً</a>
