--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -32,8 +32,8 @@ $yellow: #fcb52f;
 $color-facebook: #3b5998;
 $color-linkedin: #0077b5;
 
-$font-stack: BentonSansLight;
-$font-stack-bold: BentonSansBold;
+$font-stack: BentonSansLight, 'Arial';
+$font-stack-bold: BentonSansBold, 'Arial';
 $font-arabic: Cairo;
 $primary-color: $dark-blue;
 $secondary-color: $light-blue;
