--- a/src/app/cps/cps.component.html
+++ b/src/app/cps/cps.component.html
@@ -5,11 +5,11 @@
       </div>
     </div>
     <div class="row">
-      <div class="cps-copy col-md-6">
+      <div class="cps-copy col-md-12 col-lg-6">
         <p>American Express provides payments solutions to large corporations and mid-sized companies worldwide. We offer the convenience of putting all your travel, entertainment and purchasing expenses across one single programme, helping you to control spending and drive savings.</p>
         <p>A full range of products and services are made available including the Corporate Card and Business Travel Account to meet the travel and entertainment and B2B spending needs of our clients.</p>
       </div>
-      <div class="cps-form col-md-6" [class.invisible]="formFilled">
+      <div class="cps-form col-md-12 col-lg-6" [class.invisible]="formFilled">
         <p>Interested in knowing more about American Express Corporate Solutions? Please fill the form and we will get back to you. </p>
         <form novalidate *ngIf="formActive" [formGroup]="cpsForm" (ngSubmit)="onSubmitForm()">
           <div class="form-group row">
