--- a/src/app/press-release/press-release.component.scss
+++ b/src/app/press-release/press-release.component.scss
@@ -11,6 +11,9 @@
 #section-press-release .heading h1{
     position: relative;
 }
+#section-press-release h4{
+    font-size: 1.3rem;
+}
 #section-press-release a.btn-primary{
     background: $dark-blue;
     border-color: $dark-blue;
