Mobile Menu work with SVG

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div id="master-container" (window:resize)="onResize($event)" >
   <div id="logo">
     <img src="assets/svg/logo-amex.svg" class="amex-logo">
-    <!--<img src="assets/svg/open-iconic.min.svg" class="iconic-sprite" style="display:none;" />-->
+    <img src="assets/svg/fa-solid.svg" class="svg-sprite" style="display:none;" />
   </div>
   <div id="social-icons">
     <ul class="navbar-nav">
