--- a/src/app/navigation/navigation.component.scss
+++ b/src/app/navigation/navigation.component.scss
@@ -103,6 +103,31 @@
 #piemenu { height: 400px; width: 400px; margin:auto; }
 @media (max-width: 400px) { #piemenu { height: 300px; width: 300px; } }
 
+#circularmenu > svg { width: 100%; height: 100%; }
+#circularmenu { height: 400px; width: 400px; margin:auto; }
+#circularmenu .nav-item{
+    display: none;
+}
+#circularmenu svg.icon{
+    width: 50px !important;
+    height: 50px !important;
+    position: relative;
+}
+#circularmenu a{
+    cursor: pointer;
+    outline: none;
+    overflow: visible;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+#svg-menu{
+    display: block;
+    margin: 0 auto;
+    overflow: visible;
+}
+@media (max-width: 400px) { #circularmenu { height: 300px; width: 300px; } }
+
 [class|=wheelnav-piemenu-slice-basic] { fill: #497F4C; stroke: none; }
 [class|=wheelnav-piemenu-slice-selected] { fill: #497F4C; stroke: none; }
 [class|=wheelnav-piemenu-slice-hover] { fill: #497F4C;  stroke: none; fill-opacity: 0.77; cursor: pointer; }
