--- a/src/app/navigation/navigation.component.scss
+++ b/src/app/navigation/navigation.component.scss
@@ -58,24 +58,32 @@
 #mobile-nav #check { display: none; }
 
 #mobile-nav #nav-container{
-    width:150px;
-    height: 150px;
-    background-color: rgba($light-blue,.5);
+    width:100px;
+    height: 100px;
+    background-color: rgba($light-blue,0.5);
     position: fixed;
     bottom: 0;
-    right: 0;
+    right: 50%;
     border-radius: 50%;
-    margin-right: -75px;
-    margin-bottom: -75px;
+    margin-right: -50px;
+    margin-bottom: -50px;
     color: $white;
     z-index: 1050;
+}
+#mobile-nav #nav-container #corner{
+    position: relative;
+    text-align: center;
+    overflow: hidden;
+    z-index: 1061;
 }
 #mobile-nav #nav-container button{
     border:none;
     outline: none;
-    width: 75px;
-    height: 75px;
-    margin: 7px 10px;
+    position: relative;
+    width: 100%;
+    height: 50px;
+    margin: 7px auto;
+    z-index: 1060;
 }
 #mobile-nav #nav-container button #menu-toggle{
     color: $white;
@@ -103,29 +111,38 @@
 #piemenu { height: 400px; width: 400px; margin:auto; }
 @media (max-width: 400px) { #piemenu { height: 300px; width: 300px; } }
 
+#circularmenu{
+    position: fixed;
+    bottom: -150px;
+    left:50%;
+    margin-left: -150px !important;
+}
 #circularmenu > svg { width: 100%; height: 100%; }
 #circularmenu { height: 400px; width: 400px; margin:auto; }
 #circularmenu .nav-item{
     display: none;
 }
-#circularmenu svg.icon{
-    width: 50px !important;
-    height: 50px !important;
-    position: relative;
-}
 #circularmenu a{
     cursor: pointer;
     outline: none;
     overflow: visible;
-    position: absolute;
+    position: relative;
     top: 0;
     left: 0;
+}
+#circularmenu use{
+    color:$white;
+}
+#circularmenu use > svg{
+    transform-origin: center;
+    transform: rotateZ(-45deg); 
 }
 #svg-menu{
     display: block;
     margin: 0 auto;
     overflow: visible;
 }
+
 @media (max-width: 400px) { #circularmenu { height: 300px; width: 300px; } }
 
 [class|=wheelnav-piemenu-slice-basic] { fill: #497F4C; stroke: none; }
