--- a/src/app/reports/reports.component.scss
+++ b/src/app/reports/reports.component.scss
@@ -33,7 +33,10 @@ a.btn-primary{
 }
 #section-report .alert{
     margin-bottom:0px;
-    padding: .5rem 1.25rem;
+    margin-right: 15px;
+    top: 0px;
+    right:0px;
+    padding: .35rem 1rem;
     position: absolute;
     z-index: 999;
 }
