--- a/src/app/contact-us/contact-us.component.scss
+++ b/src/app/contact-us/contact-us.component.scss
@@ -32,7 +32,10 @@ a.btn-primary{
 }
 #section-contact-us .alert{
     margin-bottom:0px;
-    padding: .5rem 1.25rem;
+    margin-right: 15px;
+    top: 0px;
+    right:0px;
+    padding: .35rem 1rem;
     position: absolute;
     z-index: 999;
 }
