--- a/src/app/cps/cps.component.html
+++ b/src/app/cps/cps.component.html
@@ -6,12 +6,13 @@
     </div>
     <div class="row">
       <div class="cps-copy col-md-12 col-lg-6">
-        <p>American Express provides payments solutions to large corporations and mid-sized companies worldwide. We offer the convenience of putting all your travel, entertainment and purchasing expenses across one single programme, helping you to control spending and drive savings.</p>
-        <p>A full range of products and services are made available including the Corporate Card and Business Travel Account to meet the travel and entertainment and B2B spending needs of our clients.</p>
+        <p>American Express provides payment solutions to businesses of all sizes worldwide. We offer the convenience of putting all your travel, entertainment and purchasing expenses across one single programme, helping you control spending, drive savings and benefit employees.</p>
+        <p>We provide a full range of corporate products and services including the Corporate Card, Business Travel Account to meet travel and entertainment expenses and the Corporate Purchasing Card for B2B spending needs of our clients.</p>
       </div>
       <div class="cps-form col-md-12 col-lg-6" [class.invisible]="formFilled">
         <p>Interested in knowing more about American Express Corporate Solutions? Please fill the form and we will get back to you. </p>
-        <form novalidate *ngIf="formActive" [formGroup]="cpsForm" (ngSubmit)="onSubmitForm()">
+        <!--<form novalidate *ngIf="formActive" [formGroup]="cpsForm" (ngSubmit)="onSubmitForm()">-->
+        <form id="ApplicationFormPROther" ngNoForm novalidate *ngIf="formActive" [formGroup]="cpsForm" action="https://webto.salesforce.com/servlet/servlet.WebToLead?encoding=UTF-8" method="post" (ngSubmit)="onSubmitForm()">
           <div class="form-group row">
             <div class="col-sm-6">
               <input type="text" class="form-control" id="first-name" placeholder="First Name" formControlName="firstName" value="{{ firstName }}">
@@ -54,6 +55,13 @@
             </div>
           </div>
           <div class="form-group row">
+            <div class="col-sm-12">
+              <select class="form-control" id="country" formControlName="country" (change)="setCountryCode(this.cpsForm.value.country)">
+                <option *ngFor="let option of countryItems" value="{{option.name}}">{{ option.name }}</option>
+              </select>
+            </div>
+          </div>
+          <div class="form-group row">
             <div class="col-sm-3">
               <input type="text" class="form-control" id="country-code" placeholder="Code" formControlName="countryCode" disabled>
             </div>
@@ -63,13 +71,6 @@
                 <div *ngIf="phoneControl.errors.required && (phoneControl.touched || phoneControl.dirty)" class="alert alert-danger">Required</div>
                 <div *ngIf="phoneControl.errors.pattern" class="alert alert-danger">Please enter a valid number</div>
               </div>
-            </div>
-          </div>
-          <div class="form-group row">
-            <div class="col-sm-12">
-              <select class="form-control" id="country" formControlName="country" (change)="setCountryCode(this.cpsForm.value.country)">
-                <option *ngFor="let option of countryItems" value="{{option.name}}">{{ option.name }}</option>
-              </select>
             </div>
           </div>
           <div class="form-group row">
