--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,5 +5,7 @@
         <h3>Middle East</h3>
     </div>
 </div>
-
+<div id="scroll-initiator">
+    <i class="fas fa-angle-double-down fa-2x"></i>
+</div>
 
