--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -22,6 +22,30 @@
     position: relative;
 }
 
+#scroll-initiator{
+    position: absolute;
+    bottom: 50px;
+    width: 100%;
+    text-align: center;
+    animation-name: scroll-initiate;
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+    -webkit-animation-name: scroll-initiate;
+    -webkit-animation-duration: 1s;
+    -webkit-animation-iteration-count: infinite;
+    -webkit-animation-direction: alternate;
+}
+
+@keyframes scroll-initiate {
+    from {bottom: 60px;}
+    to {bottom: 50px;}
+}
+@-webkit-keyframes scroll-initiate {
+    from {bottom: 60px;}
+    to {bottom: 50px;}
+}
+
 @include media-breakpoint-down(xs){
     .section-body{
         max-width: 100%;
