--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -41,6 +41,7 @@
     <div id="corner">
       <button class="navbar-toggler" type="button" data-toggle="active" data-target="#circularmenu" aria-controls="circularmenu" aria-expanded="false" aria-label="Toggle navigation">
           <i id="menu-toggle" class="fa fa-bars fa-sm"></i>
+          <i id="menu-toggle-close" class="fa fa-times fa-sm"></i>
       </button>
     </div>
   </div>
