--- a/src/app/navigation/navigation.component.scss
+++ b/src/app/navigation/navigation.component.scss
@@ -66,7 +66,7 @@
     right: 50%;
     border-radius: 50%;
     margin-right: -50px;
-    margin-bottom: -50px;
+    margin-bottom: -70px;
     color: $white;
     z-index: 1050;
 }
@@ -82,11 +82,16 @@
     position: relative;
     width: 100%;
     height: 50px;
-    margin: 7px auto;
+    margin: -10px auto 0px;
     z-index: 1060;
 }
-#mobile-nav #nav-container button #menu-toggle{
+#mobile-nav #nav-container button #menu-toggle,
+#mobile-nav #nav-container button #menu-toggle-close{
     color: $white;
+}
+#mobile-nav #nav-container button #menu-toggle-close{
+    margin: 0px auto -100px;
+    display: none;
 }
 #mobile-nav #navbar-items{
     position: fixed;
@@ -107,15 +112,13 @@
     color: $white;
 }
 
-#piemenu > svg { width: 100%; height: 100%; }
-#piemenu { height: 400px; width: 400px; margin:auto; }
-@media (max-width: 400px) { #piemenu { height: 300px; width: 300px; } }
-
 #circularmenu{
     position: fixed;
-    bottom: -150px;
+    bottom: -135px;
     left:50%;
-    margin-left: -150px !important;
+    margin-left: -135px !important;
+    //-webkit-clip-path: circle(25% at 50% 50%);
+    //clip-path: circle(25% at 50% 50%);
 }
 #circularmenu > svg { width: 100%; height: 100%; }
 #circularmenu { height: 400px; width: 400px; margin:auto; }
@@ -127,8 +130,6 @@
     outline: none;
     overflow: visible;
     position: relative;
-    top: 0;
-    left: 0;
 }
 #circularmenu use{
     color:$white;
@@ -143,15 +144,73 @@
     overflow: visible;
 }
 
-@media (max-width: 400px) { #circularmenu { height: 300px; width: 300px; } }
+/*#circularmenu.active svg .slice path{
+    animation-duration: 1s;
+    animation-name: showMobileNav;
+    animation-direction: alternate;
+    //animation-iteration-count: infinite;
+    -webkit-animation-duration: 1s;
+    -webkit-animation-name: showMobileNav;
+    -webkit-animation-direction: alternate;
+    //-webkit-animation-iteration-count: infinite;
+    transform-origin: center center;
+}
+#circularmenu svg .slice path{
+    animation-duration: 1s;
+    animation-name: hideMobileNav;
+    animation-direction: alternate;
+    //animation-iteration-count: infinite;
+    -webkit-animation-duration: 1s;
+    -webkit-animation-name: hideMobileNav;
+    -webkit-animation-direction: alternate;
+    //-webkit-animation-iteration-count: infinite;
+    transform-origin: center center;
+}
 
-[class|=wheelnav-piemenu-slice-basic] { fill: #497F4C; stroke: none; }
-[class|=wheelnav-piemenu-slice-selected] { fill: #497F4C; stroke: none; }
-[class|=wheelnav-piemenu-slice-hover] { fill: #497F4C;  stroke: none; fill-opacity: 0.77; cursor: pointer; }
+@keyframes showMobileNav {
+    from {
+        -webkit-transform: scale3d(0, 0, 0);
+        transform: scale3d(0, 0, 0);
+    }
+    to {
+        -webkit-transform: scale3d(1, 1, 1);
+        transform: scale3d(1, 1, 1);
+    }
+  }
+@-webkit-keyframes showMobileNav {
+    from {
+        -webkit-transform: scale3d(0, 0, 0);
+        transform: scale3d(0, 0, 0);
+    }
+    to {
+        -webkit-transform: scale3d(1, 1, 1);
+        transform: scale3d(1, 1, 1);
+    }
+  }
 
-[class|=wheelnav-piemenu-title-basic] { fill: #333; stroke: none; }
-[class|=wheelnav-piemenu-title-selected] { fill: #fff; stroke: none; }
-[class|=wheelnav-piemenu-title-hover] { fill: #222; stroke: none; cursor: pointer; }
+@keyframes hideMobileNav {
+    from {
+        -webkit-transform: scale3d(1, 1, 1);
+        transform: scale3d(0, 0, 0);
+    }
+    to {
+        -webkit-transform: scale3d(1, 1, 1);
+        transform: scale3d(0, 0, 0);
+    }
+  }
+@-webkit-keyframes hideMobileNav {
+    from {
+        -webkit-transform: scale3d(1, 1, 1);
+        transform: scale3d(1, 1, 1);
+    }
+    to {
+        -webkit-transform: scale3d(0, 0, 0);
+        transform: scale3d(0, 0, 0);
+    }
+  }*/
+
+@media (max-width: 400px) { #circularmenu { height: 270px; width: 270px; } }
+
 
 
 /*@include media-breakpoint-up(sm) { ... }
