--- a/src/app/overview/overview.component.html
+++ b/src/app/overview/overview.component.html
@@ -2,7 +2,7 @@
   <div class="heading-container">
     <div class="heading">
       <h1>Overview</h1>
-      <h4>Prevailing economic optimism across Middle East</h4>
+      <h4>The 2018 Global Business &amp; Spending Outlook</h4>
       <hr class="line">
     </div>
   </div>
@@ -26,14 +26,20 @@
           </div>
         </div>
         <div class="col col-sm-12 col-lg-8">
-          <p>The 2018 Global Business &amp; Spending Outlook by American Express details Middle East's executives' views on the economic outlook, spending plans and the future of the technology. </p>
-          <p>The cross-industry findings in the joint American Express and Institutional Investor¹ study are based on a survey of 870 CFOs and other senior finance executives at companies with annual revenue of $500 million or more from more than 21 countries worldwide. And for the first time in its 11-year history, the study includes respondents from the Middle East region –– adding to its holistic view of a dynamic global services economy.  </p>
+          <p>The 2018 Global Business &amp; Spending Outlook details Middle East’s executives’ views on the economic outlook, spending plans, and the future of technology. </p>
+          <p>The cross-industry findings in the joint American Express and Institutional Investor¹ study are based on a survey of 870 CFOs and other senior finance executives at companies with annual revenue of $500 million or more from more than 21 countries worldwide. And for the first time in its 11-year history, the study includes respondents from the Middle East region –– adding to its holistic view of a dynamic global services economy.</p>
         </div>
       </div>
     </div>
     <div>
-      <p>Middle East finance executives report great confidence in the economic growth prospects for the year ahead. This optimistic climate is expected to boost business spending and investment levels thus shifting businesses in to growth mode. In 2018, the top priority for the senior executives is better meeting customers’ evolving needs with focus on new product development and mobile technology. Employment levels are also anticipated to rise. In the year ahead, more freelancers, part-time workers and temps are expected to join Middle East’s growing workforce. Visionary finance executives are taking great interest in next-generation technologies with investments in Robotics &amp; Automation and Artificial intelligence. 
-        </p>
+      <ul>
+        <li>Senior finance executives report great confidence in the economic growth prospects in 2018</li>
+        <li>Region's optimistic climate is expected to boost business spending and investment levels thus shifting businesses in to growth mode</li>
+        <li>In 2018, the top priority for Middle East finance executives is better meeting customers’ evolving needs</li>
+        <li>This year, the focus is on new product development and mobile technology</li>
+        <li>Employments levels are anticipated to rise. More freelancers, part-timers and temps are expected to join Middle East’s growing work force</li>
+        <li>Visionary finance executives are taking great interest in next-generation technologies with investments in Robotics &amp; Automation and AI</li>
+      </ul>
     </div>  
   </div>
 </div>
