--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -30,6 +30,7 @@
    </div>-->
    <div id="nav-name">
      <div class="title"></div>
+     <div class="arrow"></div>
    </div>
    <div id="circularmenu">
     <div *ngFor="let link of linksMobile" [attr.data-menuanchor]="link.anchor" class="nav-item">
