--- a/src/app/navigation/navigation.component.scss
+++ b/src/app/navigation/navigation.component.scss
@@ -60,7 +60,7 @@
 #mobile-nav #nav-container{
     width:100px;
     height: 100px;
-    background-color: rgba($light-blue,0.5);
+    background-color: rgba($dark-blue,.9);
     position: fixed;
     bottom: 0;
     right: 50%;
@@ -68,13 +68,13 @@
     margin-right: -50px;
     margin-bottom: -60px;
     color: $white;
-    z-index: 1050;
+    z-index: 9997;
 }
 #mobile-nav #nav-container #corner{
     position: relative;
     text-align: center;
     overflow: hidden;
-    z-index: 1061;
+    z-index: 9998;
 }
 #mobile-nav #nav-container button{
     border:none;
@@ -83,7 +83,7 @@
     width: 100%;
     height: 50px;
     margin: -5px auto 0px;
-    z-index: 1060;
+    z-index: 9999;
 }
 #mobile-nav #nav-container button #menu-toggle,
 #mobile-nav #nav-container button #menu-toggle-close{
@@ -120,6 +120,7 @@
     bottom: 100%;
     width: 100%;
     left: 0;
+    font-size: 0.8rem;
 }
 #nav-name .title{
     padding:.5rem 1rem;
@@ -128,10 +129,42 @@
     display: inline-block;
     width: auto;
 }
+#nav-name .arrow{
+    bottom: calc((.5rem + 1px) * -1);
+    position: absolute;
+    display: inline-block;
+    width: 1rem;
+    height: .5rem;
+    left:50%;
+    margin-left: -.5rem;
+}
+#nav-name .arrow:before{
+    position: absolute;
+    display: block;
+    content: "";
+    border-color: transparent;
+    border-style: solid;
+    box-sizing: border-box;
+    border-width: .5rem .5rem 0;
+    bottom: 0;
+    border-top-color: rgba($dark-blue, .25);
+}
+#nav-name .arrow:after{
+    position: absolute;
+    display: block;
+    content: "";
+    border-color: transparent;
+    border-style: solid;
+    box-sizing: border-box;
+    border-width: .5rem .5rem 0;
+    bottom: 1px;
+    border-top-color: rgba($dark-blue, .8);
+}
 #circularmenu{
     position: fixed;
     bottom: 100%;
     left:50%;
+    transform-origin: center center;
     //-webkit-clip-path: circle(25% at 50% 50%);
     //clip-path: circle(25% at 50% 50%);
 }
@@ -158,71 +191,6 @@
     margin: 0 auto;
     overflow: visible;
 }
-
-/*#circularmenu.active svg .slice path{
-    animation-duration: 1s;
-    animation-name: showMobileNav;
-    animation-direction: alternate;
-    //animation-iteration-count: infinite;
-    -webkit-animation-duration: 1s;
-    -webkit-animation-name: showMobileNav;
-    -webkit-animation-direction: alternate;
-    //-webkit-animation-iteration-count: infinite;
-    transform-origin: center center;
-}
-#circularmenu svg .slice path{
-    animation-duration: 1s;
-    animation-name: hideMobileNav;
-    animation-direction: alternate;
-    //animation-iteration-count: infinite;
-    -webkit-animation-duration: 1s;
-    -webkit-animation-name: hideMobileNav;
-    -webkit-animation-direction: alternate;
-    //-webkit-animation-iteration-count: infinite;
-    transform-origin: center center;
-}
-
-@keyframes showMobileNav {
-    from {
-        -webkit-transform: scale3d(0, 0, 0);
-        transform: scale3d(0, 0, 0);
-    }
-    to {
-        -webkit-transform: scale3d(1, 1, 1);
-        transform: scale3d(1, 1, 1);
-    }
-  }
-@-webkit-keyframes showMobileNav {
-    from {
-        -webkit-transform: scale3d(0, 0, 0);
-        transform: scale3d(0, 0, 0);
-    }
-    to {
-        -webkit-transform: scale3d(1, 1, 1);
-        transform: scale3d(1, 1, 1);
-    }
-  }
-
-@keyframes hideMobileNav {
-    from {
-        -webkit-transform: scale3d(1, 1, 1);
-        transform: scale3d(0, 0, 0);
-    }
-    to {
-        -webkit-transform: scale3d(1, 1, 1);
-        transform: scale3d(0, 0, 0);
-    }
-  }
-@-webkit-keyframes hideMobileNav {
-    from {
-        -webkit-transform: scale3d(1, 1, 1);
-        transform: scale3d(1, 1, 1);
-    }
-    to {
-        -webkit-transform: scale3d(0, 0, 0);
-        transform: scale3d(0, 0, 0);
-    }
-  }*/
 
 @media (max-width: 576px) { #circularmenu { display:block; height: 270px; width: 270px; } }
 
