--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -39,6 +39,7 @@
       </a>
     </div>
    </div>
+   <!--<div id="circularmenu-rotate"></div>-->
 
   <div id="nav-container">
     <div id="corner">
