--- a/src/app/cps/cps.component.html
+++ b/src/app/cps/cps.component.html
@@ -12,7 +12,7 @@
       <div class="cps-form col-md-12 col-lg-6" [class.invisible]="formFilled">
         <p>Interested in knowing more about American Express Corporate Solutions? Please fill the form and we will get back to you. </p>
         <!--<form novalidate *ngIf="formActive" [formGroup]="cpsForm" (ngSubmit)="onSubmitForm()">-->
-        <form id="ApplicationFormPROther" ngNoForm novalidate *ngIf="formActive" [formGroup]="cpsForm" action="https://webto.salesforce.com/servlet/servlet.WebToLead?encoding=UTF-8" method="post" (ngSubmit)="onSubmitForm()">
+        <form id="ApplicationFormPROther" novalidate *ngIf="formActive" [formGroup]="cpsForm" (ngSubmit)="onSubmitForm()">
           <div class="form-group row">
             <div class="col-sm-6">
               <input type="text" class="form-control" id="first-name" placeholder="First Name" formControlName="firstName" value="{{ firstName }}">
@@ -75,7 +75,7 @@
           </div>
           <div class="form-group row">
             <div class="col-sm-12">
-              <select id="lead_source" name="lead_source"formControlName="lead_source" style="display:none;">
+              <select id="lead_source" name="lead_source" formControlName="lead_source" style="display:none;">
                 <option value="Partner Aquisition Campaign" selected="selected">CFO Survey</option>
               </select>
               <select id="00N20000001DX1u" name="00N20000001DX1u" title="Sub-Source" formControlName="00N20000001DX1u" style="display:none;">
@@ -84,7 +84,9 @@
               <select id="rating" name="rating" formControlName="rating" style="display:none;">
                 <option value="Hot">Hot</option>
               </select>
-              <button type="submit" class="submit-btn btn btn-primary mb-2 col-sm-12" [disabled]="!cpsForm.valid">Submit</button>
+              <!--<button type="submit" class="submit-btn btn btn-primary mb-2 col-sm-12" (click)="validateForm()">Validate</button>
+              <button type="submit" class="submit-btn btn btn-primary mb-2 col-sm-12" [disabled]="!cpsForm.valid">Submit</button>-->
+              <button type="submit" class="submit-btn btn btn-primary mb-2 col-sm-12">Submit</button>
             </div>
           </div>
         </form>
