--- a/src/app/navigation/navigation.component.scss
+++ b/src/app/navigation/navigation.component.scss
@@ -112,6 +112,11 @@
     color: $white;
 }
 
+body.stop-scrolling{
+    height: 100%;
+    overflow: hidden;
+}
+
 #nav-name{
     display:none;
     opacity: 0;
@@ -190,6 +195,16 @@
     display: block;
     margin: 0 auto;
     overflow: visible;
+}
+#circularmenu-rotate{
+    position: fixed;
+    left:0;
+    bottom: 0;
+    width:100%;
+    height:50%;
+    background:transparent;
+    display: block;
+    visibility: hidden;
 }
 
 @media (max-width: 576px) { #circularmenu { display:block; height: 270px; width: 270px; } }
